# geometric_lib

./: circle.py  square.py
docs/: README.md  circle.py
geometric_lib/docs/labwork1-pleksii/tests/: CMakeLists.txt  test_generator.cpp
geometric_lib/docs/labwork1-pleksii/tests/test_cases/negative/case1/: template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/negative/case2/: template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case1/: template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case10/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case11/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case12/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case13/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case14/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case15/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case16/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case2/: template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case3/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case4/: expected.txt  template.txt
geometric_lib/docs/labwork1-pleksii/tests/test_cases/positive/case5/: expected.txt  template.txt
(+15 files in other folders)
